# Turtlebot

./: .gitignore  README.md  docker-compose.yaml  notka.md
docker/: Dockerfile  bashrc
docker/turtlebot3/: dsad
docker/turtlebot3/DynamixelSDK/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
docker/turtlebot3/DynamixelSDK/log/: latest_build
docker/turtlebot3/mmrs_interfaces/: CMakeLists.txt  package.xml
docker/turtlebot3/mmrs_interfaces/action/: PathProcessing.action
docker/turtlebot3/mmrs_interfaces/msg/: AreaMessage.msg  TriggerPose.msg
docker/turtlebot3/mmrs_interfaces/srv/: PathService.srv  ReserveArea.srv
docker/turtlebot3/nav2_bringup/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
docker/turtlebot3/nav2_bringup/launch/: tb3_simulation_launch.py  (+1 more)
docker/turtlebot3/turtlebot_mmrs/: package.xml  setup.cfg  setup.py
docker/turtlebot3/turtlebot_mmrs/launch/: bringup_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py  tb3_simulation_launch.py  turtlebot_mmrs_launch.py  unique_multi_tb3_simulation_launch.py
docker/turtlebot3/turtlebot_mmrs/maps/: map.yaml
docker/turtlebot3/turtlebot_mmrs/params/: nav2_multirobot_params_1.yaml  nav2_multirobot_params_2.yaml
docker/turtlebot3/turtlebot_mmrs/turtlebot_mmrs/: central_controller.py  controller.py  mmrs_classes.py  rigid_bodies_listener.py  robot1_follow_path.py  robot1_navigate.py  robot2_navigate.py  robot_controller.py  test_module.py  tf_listener.py
docker/turtlebot3/turtlebot_mmrs/urdf/: turtlebot3_waffle_pi.urdf
(+498 files in other folders)
